# finpipeline

./: pyproject.toml
finpipeline/: .dockerignore  Dockerfile  README.md  railway.toml
finpipeline/dashboard/: index.html
finpipeline/migrations/: env.py
finpipeline/migrations/versions/: 72e85f336b2c_create_initial_tables.py  f03d946d7afa_add_macro_fingerprints_table.py
finpipeline/src/: analytics.py  api.py  auth.py  backtest.py  config.py  db.py  regime.py  seed.py  validators.py
finpipeline/src/fetchers/: macro_fetcher.py  stock_fetcher.py
